--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "astro": "^2.0.15"
+    "@astrojs/preact": "^2.1.0",
+    "astro": "^2.0.15",
+    "preact": "^10.13.1"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.53.0",
